[FIX] Administrative layout: alignment of records

--- a/indico/htdocs/css/events/common.css
+++ b/indico/htdocs/css/events/common.css
@@ -699,5 +699,5 @@ span.description pre, p {
 }
 
 .materialDisplayName {
-    white-space: nowrap;
+    font-size: 14px;
 }
